# 01-rcli

./: Cargo.toml  README.md  cliff.toml  deny.toml  test.http
fixtures/: b64.txt  blake3.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64_opts.rs  csv_opts.rs  genpass_opts.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
