[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Ltd <Ltd@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.5"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
features = "0.10.0"
fs = "0.0.5"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "rt", "rt-multi-thread"] }
tokio-macros = "2.5.0"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "fs", "full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
